// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GET /budgets > 9 月固定支出總額（訂閱月換算，年繳 ÷12） 1`] = `
{
  "amount": 1810,
  "month": "2026-09",
}
`;

exports[`GET /budgets > 9 月預算 1`] = `
[
  {
    "amount": 14000,
    "id": 1,
    "mainCategoryId": 1,
    "month": "2026-09",
  },
  {
    "amount": 4000,
    "id": 2,
    "mainCategoryId": 2,
    "month": "2026-09",
  },
  {
    "amount": 28000,
    "id": 3,
    "mainCategoryId": 3,
    "month": "2026-09",
  },
  {
    "amount": 6000,
    "id": 4,
    "mainCategoryId": 4,
    "month": "2026-09",
  },
  {
    "amount": 6000,
    "id": 5,
    "mainCategoryId": 6,
    "month": "2026-09",
  },
]
`;

exports[`GET /summary/dashboard > 上月（8 月） 1`] = `
{
  "categories": [
    {
      "budget": 14000,
      "icon": "restaurant",
      "id": 1,
      "name": "食",
      "recent": [
        {
          "amount": 360,
          "createdAt": "2026-08-06T09:11:00.000Z",
          "createdBy": 1,
          "createdByName": "先生",
          "date": "2026-08-06",
          "id": 78,
          "isDeleted": false,
          "mainCategoryId": 1,
          "mainCategoryName": "食",
          "note": null,
          "payerId": 1,
          "payerName": "先生",
          "sourceSubscriptionId": null,
          "subCategoryId": 1,
          "subCategoryName": "早餐",
          "type": "expense",
        },
        {
          "amount": 1640,
          "createdAt": "2026-08-03T09:10:00.000Z",
          "createdBy": 2,
          "createdByName": "太太",
          "date": "2026-08-03",
          "id": 77,
          "isDeleted": false,
          "mainCategoryId": 1,
          "mainCategoryName": "食",
          "note": "週末採買",
          "payerId": 2,
          "payerName": "太太",
          "sourceSubscriptionId": null,
          "subCategoryId": 4,
          "subCategoryName": "食材",
          "type": "expense",
        },
      ],
      "scheduled": 0,
      "spent": 2000,
    },
    {
      "budget": 4000,
      "icon": "apparel",
      "id": 2,
      "name": "衣",
      "recent": [
        {
          "amount": 1860,
          "createdAt": "2026-08-21T09:16:00.000Z",
          "createdBy": 2,
          "createdByName": "太太",
          "date": "2026-08-21",
          "id": 83,
          "isDeleted": false,
          "mainCategoryId": 2,
          "mainCategoryName": "衣",
          "note": null,
          "payerId": 2,
          "payerName": "太太",
          "sourceSubscriptionId": null,
          "subCategoryId": 6,
          "subCategoryName": "衣物",
          "type": "expense",
        },
      ],
      "scheduled": 0,
      "spent": 1860,
    },
    {
      "budget": 28000,
      "icon": "home",
      "id": 3,
      "name": "住",
      "recent": [
        {
          "amount": 2570,
          "createdAt": "2026-08-12T09:13:00.000Z",
          "createdBy": 1,
          "createdByName": "先生",
          "date": "2026-08-12",
          "id": 80,
          "isDeleted": false,
          "mainCategoryId": 3,
          "mainCategoryName": "住",
          "note": null,
          "payerId": 1,
          "payerName": "先生",
          "sourceSubscriptionId": null,
          "subCategoryId": 10,
          "subCategoryName": "水電",
          "type": "expense",
        },
        {
          "amount": 19140,
          "createdAt": "2026-08-09T09:12:00.000Z",
          "createdBy": 1,
          "createdByName": "先生",
          "date": "2026-08-09",
          "id": 79,
          "isDeleted": false,
          "mainCategoryId": 3,
          "mainCategoryName": "住",
          "note": null,
          "payerId": 1,
          "payerName": "先生",
          "sourceSubscriptionId": null,
          "subCategoryId": 9,
          "subCategoryName": "房租",
          "type": "expense",
        },
      ],
      "scheduled": 0,
      "spent": 21710,
    },
    {
      "budget": 6000,
      "icon": "directions_car",
      "id": 4,
      "name": "行",
      "recent": [
        {
          "amount": 1400,
          "createdAt": "2026-08-15T09:14:00.000Z",
          "createdBy": 1,
          "createdByName": "先生",
          "date": "2026-08-15",
          "id": 81,
          "isDeleted": false,
          "mainCategoryId": 4,
          "mainCategoryName": "行",
          "note": null,
          "payerId": 1,
          "payerName": "先生",
          "sourceSubscriptionId": null,
          "subCategoryId": 13,
          "subCategoryName": "加油",
          "type": "expense",
        },
      ],
      "scheduled": 0,
      "spent": 1400,
    },
    {
      "budget": 6000,
      "icon": "sports_esports",
      "id": 6,
      "name": "育樂",
      "recent": [
        {
          "amount": 2020,
          "createdAt": "2026-08-18T09:15:00.000Z",
          "createdBy": 2,
          "createdByName": "太太",
          "date": "2026-08-18",
          "id": 82,
          "isDeleted": false,
          "mainCategoryId": 6,
          "mainCategoryName": "育樂",
          "note": null,
          "payerId": 2,
          "payerName": "太太",
          "sourceSubscriptionId": null,
          "subCategoryId": 21,
          "subCategoryName": "聚餐",
          "type": "expense",
        },
      ],
      "scheduled": 0,
      "spent": 2020,
    },
    {
      "budget": null,
      "icon": "school",
      "id": 7,
      "name": "教育",
      "recent": [
        {
          "amount": 1680,
          "createdAt": "2026-08-27T09:18:00.000Z",
          "createdBy": 2,
          "createdByName": "太太",
          "date": "2026-08-27",
          "id": 84,
          "isDeleted": false,
          "mainCategoryId": 7,
          "mainCategoryName": "教育",
          "note": null,
          "payerId": 2,
          "payerName": "太太",
          "sourceSubscriptionId": null,
          "subCategoryId": 23,
          "subCategoryName": "才藝課",
          "type": "expense",
        },
      ],
      "scheduled": 0,
      "spent": 1680,
    },
    {
      "budget": null,
      "icon": "category",
      "id": 11,
      "name": "其他",
      "recent": [],
      "scheduled": 0,
      "spent": 0,
    },
  ],
  "recent": [
    {
      "amount": 3460,
      "createdAt": "2026-08-28T09:19:00.000Z",
      "createdBy": 1,
      "createdByName": "先生",
      "date": "2026-08-28",
      "id": 85,
      "isDeleted": false,
      "mainCategoryId": 8,
      "mainCategoryName": "保險",
      "note": null,
      "payerId": 1,
      "payerName": "先生",
      "sourceSubscriptionId": null,
      "subCategoryId": 26,
      "subCategoryName": "壽險",
      "type": "expense",
    },
    {
      "amount": 1680,
      "createdAt": "2026-08-27T09:18:00.000Z",
      "createdBy": 2,
      "createdByName": "太太",
      "date": "2026-08-27",
      "id": 84,
      "isDeleted": false,
      "mainCategoryId": 7,
      "mainCategoryName": "教育",
      "note": null,
      "payerId": 2,
      "payerName": "太太",
      "sourceSubscriptionId": null,
      "subCategoryId": 23,
      "subCategoryName": "才藝課",
      "type": "expense",
    },
    {
      "amount": 1860,
      "createdAt": "2026-08-21T09:16:00.000Z",
      "createdBy": 2,
      "createdByName": "太太",
      "date": "2026-08-21",
      "id": 83,
      "isDeleted": false,
      "mainCategoryId": 2,
      "mainCategoryName": "衣",
      "note": null,
      "payerId": 2,
      "payerName": "太太",
      "sourceSubscriptionId": null,
      "subCategoryId": 6,
      "subCategoryName": "衣物",
      "type": "expense",
    },
    {
      "amount": 2020,
      "createdAt": "2026-08-18T09:15:00.000Z",
      "createdBy": 2,
      "createdByName": "太太",
      "date": "2026-08-18",
      "id": 82,
      "isDeleted": false,
      "mainCategoryId": 6,
      "mainCategoryName": "育樂",
      "note": null,
      "payerId": 2,
      "payerName": "太太",
      "sourceSubscriptionId": null,
      "subCategoryId": 21,
      "subCategoryName": "聚餐",
      "type": "expense",
    },
    {
      "amount": 1400,
      "createdAt": "2026-08-15T09:14:00.000Z",
      "createdBy": 1,
      "createdByName": "先生",
      "date": "2026-08-15",
      "id": 81,
      "isDeleted": false,
      "mainCategoryId": 4,
      "mainCategoryName": "行",
      "note": null,
      "payerId": 1,
      "payerName": "先生",
      "sourceSubscriptionId": null,
      "subCategoryId": 13,
      "subCategoryName": "加油",
      "type": "expense",
    },
  ],
  "summary": {
    "expense": 34130,
    "fixedTotal": 2078,
    "income": 168500,
    "month": "2026-08",
    "net": 134370,
    "scheduledExpense": 0,
  },
}
`;

exports[`GET /summary/dashboard > 本月（9 月） 1`] = `
{
  "categories": [
    {
      "budget": 14000,
      "icon": "restaurant",
      "id": 1,
      "name": "食",
      "recent": [
        {
          "amount": 290,
          "createdAt": "2026-09-06T09:11:00.000Z",
          "createdBy": 1,
          "createdByName": "先生",
          "date": "2026-09-06",
          "id": 89,
          "isDeleted": false,
          "mainCategoryId": 1,
          "mainCategoryName": "食",
          "note": null,
          "payerId": 1,
          "payerName": "先生",
          "sourceSubscriptionId": null,
          "subCategoryId": 1,
          "subCategoryName": "早餐",
          "type": "expense",
        },
        {
          "amount": 1300,
          "createdAt": "2026-09-03T09:10:00.000Z",
          "createdBy": 2,
          "createdByName": "太太",
          "date": "2026-09-03",
          "id": 88,
          "isDeleted": false,
          "mainCategoryId": 1,
          "mainCategoryName": "食",
          "note": "週末採買",
          "payerId": 2,
          "payerName": "太太",
          "sourceSubscriptionId": null,
          "subCategoryId": 4,
          "subCategoryName": "食材",
          "type": "expense",
        },
      ],
      "scheduled": 0,
      "spent": 1590,
    },
    {
      "budget": 4000,
      "icon": "apparel",
      "id": 2,
      "name": "衣",
      "recent": [
        {
          "amount": 1990,
          "createdAt": "2026-09-21T09:16:00.000Z",
          "createdBy": 2,
          "createdByName": "太太",
          "date": "2026-09-21",
          "id": 94,
          "isDeleted": false,
          "mainCategoryId": 2,
          "mainCategoryName": "衣",
          "note": null,
          "payerId": 2,
          "payerName": "太太",
          "sourceSubscriptionId": null,
          "subCategoryId": 6,
          "subCategoryName": "衣物",
          "type": "expense",
        },
      ],
      "scheduled": 1990,
      "spent": 0,
    },
    {
      "budget": 28000,
      "icon": "home",
      "id": 3,
      "name": "住",
      "recent": [
        {
          "amount": 2770,
          "createdAt": "2026-09-12T09:13:00.000Z",
          "createdBy": 1,
          "createdByName": "先生",
          "date": "2026-09-12",
          "id": 91,
          "isDeleted": false,
          "mainCategoryId": 3,
          "mainCategoryName": "住",
          "note": null,
          "payerId": 1,
          "payerName": "先生",
          "sourceSubscriptionId": null,
          "subCategoryId": 10,
          "subCategoryName": "水電",
          "type": "expense",
        },
        {
          "amount": 20680,
          "createdAt": "2026-09-09T09:12:00.000Z",
          "createdBy": 1,
          "createdByName": "先生",
          "date": "2026-09-09",
          "id": 90,
          "isDeleted": false,
          "mainCategoryId": 3,
          "mainCategoryName": "住",
          "note": null,
          "payerId": 1,
          "payerName": "先生",
          "sourceSubscriptionId": null,
          "subCategoryId": 9,
          "subCategoryName": "房租",
          "type": "expense",
        },
      ],
      "scheduled": 0,
      "spent": 23450,
    },
    {
      "budget": 6000,
      "icon": "directions_car",
      "id": 4,
      "name": "行",
      "recent": [
        {
          "amount": 1500,
          "createdAt": "2026-09-15T09:14:00.000Z",
          "createdBy": 1,
          "createdByName": "先生",
          "date": "2026-09-15",
          "id": 92,
          "isDeleted": false,
          "mainCategoryId": 4,
          "mainCategoryName": "行",
          "note": null,
          "payerId": 1,
          "payerName": "先生",
          "sourceSubscriptionId": null,
          "subCategoryId": 13,
          "subCategoryName": "加油",
          "type": "expense",
        },
      ],
      "scheduled": 0,
      "spent": 1500,
    },
    {
      "budget": 6000,
      "icon": "sports_esports",
      "id": 6,
      "name": "育樂",
      "recent": [
        {
          "amount": 2160,
          "createdAt": "2026-09-18T09:15:00.000Z",
          "createdBy": 2,
          "createdByName": "太太",
          "date": "2026-09-18",
          "id": 93,
          "isDeleted": false,
          "mainCategoryId": 6,
          "mainCategoryName": "育樂",
          "note": null,
          "payerId": 2,
          "payerName": "太太",
          "sourceSubscriptionId": null,
          "subCategoryId": 21,
          "subCategoryName": "聚餐",
          "type": "expense",
        },
      ],
      "scheduled": 2160,
      "spent": 0,
    },
    {
      "budget": null,
      "icon": "school",
      "id": 7,
      "name": "教育",
      "recent": [
        {
          "amount": 1790,
          "createdAt": "2026-09-27T09:18:00.000Z",
          "createdBy": 2,
          "createdByName": "太太",
          "date": "2026-09-27",
          "id": 95,
          "isDeleted": false,
          "mainCategoryId": 7,
          "mainCategoryName": "教育",
          "note": null,
          "payerId": 2,
          "payerName": "太太",
          "sourceSubscriptionId": null,
          "subCategoryId": 23,
          "subCategoryName": "才藝課",
          "type": "expense",
        },
      ],
      "scheduled": 1790,
      "spent": 0,
    },
    {
      "budget": null,
      "icon": "category",
      "id": 11,
      "name": "其他",
      "recent": [],
      "scheduled": 0,
      "spent": 0,
    },
  ],
  "recent": [
    {
      "amount": 2720,
      "createdAt": "2026-09-28T09:19:00.000Z",
      "createdBy": 1,
      "createdByName": "先生",
      "date": "2026-09-28",
      "id": 96,
      "isDeleted": false,
      "mainCategoryId": 8,
      "mainCategoryName": "保險",
      "note": null,
      "payerId": 1,
      "payerName": "先生",
      "sourceSubscriptionId": null,
      "subCategoryId": 26,
      "subCategoryName": "壽險",
      "type": "expense",
    },
    {
      "amount": 1790,
      "createdAt": "2026-09-27T09:18:00.000Z",
      "createdBy": 2,
      "createdByName": "太太",
      "date": "2026-09-27",
      "id": 95,
      "isDeleted": false,
      "mainCategoryId": 7,
      "mainCategoryName": "教育",
      "note": null,
      "payerId": 2,
      "payerName": "太太",
      "sourceSubscriptionId": null,
      "subCategoryId": 23,
      "subCategoryName": "才藝課",
      "type": "expense",
    },
    {
      "amount": 1990,
      "createdAt": "2026-09-21T09:16:00.000Z",
      "createdBy": 2,
      "createdByName": "太太",
      "date": "2026-09-21",
      "id": 94,
      "isDeleted": false,
      "mainCategoryId": 2,
      "mainCategoryName": "衣",
      "note": null,
      "payerId": 2,
      "payerName": "太太",
      "sourceSubscriptionId": null,
      "subCategoryId": 6,
      "subCategoryName": "衣物",
      "type": "expense",
    },
    {
      "amount": 2160,
      "createdAt": "2026-09-18T09:15:00.000Z",
      "createdBy": 2,
      "createdByName": "太太",
      "date": "2026-09-18",
      "id": 93,
      "isDeleted": false,
      "mainCategoryId": 6,
      "mainCategoryName": "育樂",
      "note": null,
      "payerId": 2,
      "payerName": "太太",
      "sourceSubscriptionId": null,
      "subCategoryId": 21,
      "subCategoryName": "聚餐",
      "type": "expense",
    },
    {
      "amount": 1500,
      "createdAt": "2026-09-15T09:14:00.000Z",
      "createdBy": 1,
      "createdByName": "先生",
      "date": "2026-09-15",
      "id": 92,
      "isDeleted": false,
      "mainCategoryId": 4,
      "mainCategoryName": "行",
      "note": null,
      "payerId": 1,
      "payerName": "先生",
      "sourceSubscriptionId": null,
      "subCategoryId": 13,
      "subCategoryName": "加油",
      "type": "expense",
    },
  ],
  "summary": {
    "expense": 26540,
    "fixedTotal": 1810,
    "income": 168500,
    "month": "2026-09",
    "net": 141960,
    "scheduledExpense": 8660,
  },
}
`;

exports[`GET /summary/stats > 年統計 · 全家 1`] = `
{
  "fixed": [
    {
      "amount": 12000,
      "name": "健身房會員",
    },
    {
      "amount": 4680,
      "name": "影音串流",
    },
    {
      "amount": 2160,
      "name": "音樂訂閱",
    },
    {
      "amount": 2144,
      "name": "遊戲通行證",
    },
    {
      "amount": 1800,
      "name": "新聞訂閱",
    },
    {
      "amount": 1080,
      "name": "雲端空間",
    },
  ],
  "floating": [
    {
      "amount": 222150,
      "budget": 56000,
      "icon": "home",
      "mainCategoryId": 3,
      "name": "住",
      "subs": [
        {
          "amount": 196680,
          "name": "房租",
          "subCategoryId": 9,
        },
        {
          "amount": 25470,
          "name": "水電",
          "subCategoryId": 10,
        },
      ],
    },
    {
      "amount": 17060,
      "budget": 12000,
      "icon": "sports_esports",
      "mainCategoryId": 6,
      "name": "育樂",
      "subs": [
        {
          "amount": 17060,
          "name": "聚餐",
          "subCategoryId": 21,
        },
      ],
    },
    {
      "amount": 16190,
      "budget": 28000,
      "icon": "restaurant",
      "mainCategoryId": 1,
      "name": "食",
      "subs": [
        {
          "amount": 13320,
          "name": "食材",
          "subCategoryId": 4,
        },
        {
          "amount": 2870,
          "name": "早餐",
          "subCategoryId": 1,
        },
      ],
    },
    {
      "amount": 14600,
      "budget": 8000,
      "icon": "apparel",
      "mainCategoryId": 2,
      "name": "衣",
      "subs": [
        {
          "amount": 14600,
          "name": "衣物",
          "subCategoryId": 6,
        },
      ],
    },
    {
      "amount": 13320,
      "budget": 12000,
      "icon": "directions_car",
      "mainCategoryId": 4,
      "name": "行",
      "subs": [
        {
          "amount": 13320,
          "name": "加油",
          "subCategoryId": 13,
        },
      ],
    },
    {
      "amount": 7240,
      "budget": null,
      "icon": "favorite",
      "mainCategoryId": 5,
      "name": "健康",
      "subs": [
        {
          "amount": 7240,
          "name": "看診",
          "subCategoryId": 16,
        },
      ],
    },
    {
      "amount": 1680,
      "budget": null,
      "icon": "school",
      "mainCategoryId": 7,
      "name": "教育",
      "subs": [
        {
          "amount": 1680,
          "name": "才藝課",
          "subCategoryId": 23,
        },
      ],
    },
  ],
  "period": "2026",
  "range": "year",
  "total": 316104,
}
`;

exports[`GET /summary/stats > 月統計 · 全家 1`] = `
{
  "fixed": [
    {
      "amount": 1000,
      "name": "健身房會員",
    },
    {
      "amount": 390,
      "name": "影音串流",
    },
    {
      "amount": 180,
      "name": "音樂訂閱",
    },
    {
      "amount": 150,
      "name": "新聞訂閱",
    },
    {
      "amount": 90,
      "name": "雲端空間",
    },
  ],
  "floating": [
    {
      "amount": 23450,
      "budget": 28000,
      "icon": "home",
      "mainCategoryId": 3,
      "name": "住",
      "subs": [
        {
          "amount": 20680,
          "name": "房租",
          "subCategoryId": 9,
        },
        {
          "amount": 2770,
          "name": "水電",
          "subCategoryId": 10,
        },
      ],
    },
    {
      "amount": 1590,
      "budget": 14000,
      "icon": "restaurant",
      "mainCategoryId": 1,
      "name": "食",
      "subs": [
        {
          "amount": 1300,
          "name": "食材",
          "subCategoryId": 4,
        },
        {
          "amount": 290,
          "name": "早餐",
          "subCategoryId": 1,
        },
      ],
    },
    {
      "amount": 1500,
      "budget": 6000,
      "icon": "directions_car",
      "mainCategoryId": 4,
      "name": "行",
      "subs": [
        {
          "amount": 1500,
          "name": "加油",
          "subCategoryId": 13,
        },
      ],
    },
  ],
  "period": "2026-09",
  "range": "month",
  "total": 28350,
}
`;

exports[`GET /summary/stats > 月統計 · 只看先生 1`] = `
{
  "fixed": [
    {
      "amount": 390,
      "name": "影音串流",
    },
    {
      "amount": 150,
      "name": "新聞訂閱",
    },
    {
      "amount": 90,
      "name": "雲端空間",
    },
  ],
  "floating": [
    {
      "amount": 23450,
      "budget": 28000,
      "icon": "home",
      "mainCategoryId": 3,
      "name": "住",
      "subs": [
        {
          "amount": 20680,
          "name": "房租",
          "subCategoryId": 9,
        },
        {
          "amount": 2770,
          "name": "水電",
          "subCategoryId": 10,
        },
      ],
    },
    {
      "amount": 1500,
      "budget": 6000,
      "icon": "directions_car",
      "mainCategoryId": 4,
      "name": "行",
      "subs": [
        {
          "amount": 1500,
          "name": "加油",
          "subCategoryId": 13,
        },
      ],
    },
    {
      "amount": 290,
      "budget": 14000,
      "icon": "restaurant",
      "mainCategoryId": 1,
      "name": "食",
      "subs": [
        {
          "amount": 290,
          "name": "早餐",
          "subCategoryId": 1,
        },
      ],
    },
  ],
  "period": "2026-09",
  "range": "month",
  "total": 25870,
}
`;

exports[`GET /summary/year > 2026 年度彙整 1`] = `
{
  "expense": 317460,
  "extras": [
    {
      "amount": 86000,
      "categoryName": "育樂",
      "id": 1,
      "mainCategoryId": 6,
      "name": "日本家庭旅遊",
      "payerId": 2,
      "payerName": "太太",
      "year": 2026,
    },
    {
      "amount": 48000,
      "categoryName": "住",
      "id": 2,
      "mainCategoryId": 3,
      "name": "冷氣與冰箱更新",
      "payerId": 1,
      "payerName": "先生",
      "year": 2026,
    },
    {
      "amount": 32000,
      "categoryName": "行",
      "id": 3,
      "mainCategoryId": 4,
      "name": "汽車大保養",
      "payerId": 1,
      "payerName": "先生",
      "year": 2026,
    },
  ],
  "income": 1516500,
  "monthly": [
    {
      "expense": 36200,
      "income": 168500,
      "net": 132300,
    },
    {
      "expense": 37830,
      "income": 168500,
      "net": 130670,
    },
    {
      "expense": 38450,
      "income": 168500,
      "net": 130050,
    },
    {
      "expense": 34320,
      "income": 168500,
      "net": 134180,
    },
    {
      "expense": 35460,
      "income": 168500,
      "net": 133040,
    },
    {
      "expense": 37100,
      "income": 168500,
      "net": 131400,
    },
    {
      "expense": 37430,
      "income": 168500,
      "net": 131070,
    },
    {
      "expense": 34130,
      "income": 168500,
      "net": 134370,
    },
    {
      "expense": 26540,
      "income": 168500,
      "net": 141960,
    },
    null,
    null,
    null,
  ],
  "net": 1199040,
  "recordedMonths": 9,
  "rows": [
    {
      "endMonth": 12,
      "extra": null,
      "icon": "restaurant",
      "mainCategoryId": 1,
      "monthlyBudget": 14000,
      "months": [
        1660,
        1800,
        1920,
        1950,
        1630,
        1760,
        1880,
        2000,
        1590,
        null,
        null,
        null,
      ],
      "name": "食",
      "planned": 70000,
      "startMonth": 0,
      "total": 16190,
    },
    {
      "endMonth": 12,
      "extra": null,
      "icon": "apparel",
      "mainCategoryId": 2,
      "monthlyBudget": 4000,
      "months": [
        2070,
        1640,
        1770,
        1900,
        2030,
        1600,
        1730,
        1860,
        null,
        null,
        null,
        null,
      ],
      "name": "衣",
      "planned": 20000,
      "startMonth": 0,
      "total": 14600,
    },
    {
      "endMonth": 12,
      "extra": 48000,
      "icon": "home",
      "mainCategoryId": 3,
      "monthlyBudget": 28000,
      "months": [
        24450,
        26190,
        27070,
        22210,
        23950,
        25690,
        27430,
        21710,
        23450,
        null,
        null,
        null,
      ],
      "name": "住",
      "planned": 188000,
      "startMonth": 0,
      "total": 270150,
    },
    {
      "endMonth": 12,
      "extra": 32000,
      "icon": "directions_car",
      "mainCategoryId": 4,
      "monthlyBudget": 6000,
      "months": [
        1560,
        1660,
        1320,
        1430,
        1530,
        1630,
        1290,
        1400,
        1500,
        null,
        null,
        null,
      ],
      "name": "行",
      "planned": 62000,
      "startMonth": 0,
      "total": 45320,
    },
    {
      "endMonth": 6,
      "extra": null,
      "icon": "favorite",
      "mainCategoryId": 5,
      "monthlyBudget": 0,
      "months": [
        1360,
        1080,
        1160,
        1250,
        1330,
        1060,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "name": "健康",
      "planned": null,
      "startMonth": 0,
      "total": 7240,
    },
    {
      "endMonth": 12,
      "extra": 86000,
      "icon": "sports_esports",
      "mainCategoryId": 6,
      "monthlyBudget": 6000,
      "months": [
        2250,
        2390,
        1910,
        2060,
        2210,
        2350,
        1870,
        2020,
        null,
        null,
        null,
        null,
      ],
      "name": "育樂",
      "planned": 116000,
      "startMonth": 0,
      "total": 103060,
    },
    {
      "endMonth": 12,
      "extra": null,
      "icon": "school",
      "mainCategoryId": 7,
      "monthlyBudget": 0,
      "months": [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        1680,
        null,
        null,
        null,
        null,
      ],
      "name": "教育",
      "planned": null,
      "startMonth": 7,
      "total": 1680,
    },
    {
      "endMonth": 12,
      "extra": null,
      "icon": "shield",
      "mainCategoryId": 8,
      "monthlyBudget": 0,
      "months": [
        2850,
        3070,
        3300,
        3520,
        2780,
        3010,
        3230,
        3460,
        null,
        null,
        null,
        null,
      ],
      "name": "保險",
      "planned": null,
      "startMonth": 0,
      "total": 25220,
    },
  ],
  "year": 2026,
}
`;

exports[`GET /transactions > 9 月第 1 頁 1`] = `
{
  "items": [
    {
      "amount": 2720,
      "createdAt": "2026-09-28T09:19:00.000Z",
      "createdBy": 1,
      "createdByName": "先生",
      "date": "2026-09-28",
      "id": 96,
      "isDeleted": false,
      "mainCategoryId": 8,
      "mainCategoryName": "保險",
      "note": null,
      "payerId": 1,
      "payerName": "先生",
      "sourceSubscriptionId": null,
      "subCategoryId": 26,
      "subCategoryName": "壽險",
      "type": "expense",
    },
    {
      "amount": 1790,
      "createdAt": "2026-09-27T09:18:00.000Z",
      "createdBy": 2,
      "createdByName": "太太",
      "date": "2026-09-27",
      "id": 95,
      "isDeleted": false,
      "mainCategoryId": 7,
      "mainCategoryName": "教育",
      "note": null,
      "payerId": 2,
      "payerName": "太太",
      "sourceSubscriptionId": null,
      "subCategoryId": 23,
      "subCategoryName": "才藝課",
      "type": "expense",
    },
    {
      "amount": 1990,
      "createdAt": "2026-09-21T09:16:00.000Z",
      "createdBy": 2,
      "createdByName": "太太",
      "date": "2026-09-21",
      "id": 94,
      "isDeleted": false,
      "mainCategoryId": 2,
      "mainCategoryName": "衣",
      "note": null,
      "payerId": 2,
      "payerName": "太太",
      "sourceSubscriptionId": null,
      "subCategoryId": 6,
      "subCategoryName": "衣物",
      "type": "expense",
    },
    {
      "amount": 2160,
      "createdAt": "2026-09-18T09:15:00.000Z",
      "createdBy": 2,
      "createdByName": "太太",
      "date": "2026-09-18",
      "id": 93,
      "isDeleted": false,
      "mainCategoryId": 6,
      "mainCategoryName": "育樂",
      "note": null,
      "payerId": 2,
      "payerName": "太太",
      "sourceSubscriptionId": null,
      "subCategoryId": 21,
      "subCategoryName": "聚餐",
      "type": "expense",
    },
    {
      "amount": 1500,
      "createdAt": "2026-09-15T09:14:00.000Z",
      "createdBy": 1,
      "createdByName": "先生",
      "date": "2026-09-15",
      "id": 92,
      "isDeleted": false,
      "mainCategoryId": 4,
      "mainCategoryName": "行",
      "note": null,
      "payerId": 1,
      "payerName": "先生",
      "sourceSubscriptionId": null,
      "subCategoryId": 13,
      "subCategoryName": "加油",
      "type": "expense",
    },
    {
      "amount": 2770,
      "createdAt": "2026-09-12T09:13:00.000Z",
      "createdBy": 1,
      "createdByName": "先生",
      "date": "2026-09-12",
      "id": 91,
      "isDeleted": false,
      "mainCategoryId": 3,
      "mainCategoryName": "住",
      "note": null,
      "payerId": 1,
      "payerName": "先生",
      "sourceSubscriptionId": null,
      "subCategoryId": 10,
      "subCategoryName": "水電",
      "type": "expense",
    },
    {
      "amount": 20680,
      "createdAt": "2026-09-09T09:12:00.000Z",
      "createdBy": 1,
      "createdByName": "先生",
      "date": "2026-09-09",
      "id": 90,
      "isDeleted": false,
      "mainCategoryId": 3,
      "mainCategoryName": "住",
      "note": null,
      "payerId": 1,
      "payerName": "先生",
      "sourceSubscriptionId": null,
      "subCategoryId": 9,
      "subCategoryName": "房租",
      "type": "expense",
    },
    {
      "amount": 290,
      "createdAt": "2026-09-06T09:11:00.000Z",
      "createdBy": 1,
      "createdByName": "先生",
      "date": "2026-09-06",
      "id": 89,
      "isDeleted": false,
      "mainCategoryId": 1,
      "mainCategoryName": "食",
      "note": null,
      "payerId": 1,
      "payerName": "先生",
      "sourceSubscriptionId": null,
      "subCategoryId": 1,
      "subCategoryName": "早餐",
      "type": "expense",
    },
    {
      "amount": 76500,
      "createdAt": "2026-09-05T08:00:00.000Z",
      "createdBy": 2,
      "createdByName": "太太",
      "date": "2026-09-05",
      "id": 98,
      "isDeleted": false,
      "mainCategoryId": 10,
      "mainCategoryName": "薪資",
      "note": null,
      "payerId": 2,
      "payerName": "太太",
      "sourceSubscriptionId": null,
      "subCategoryId": 28,
      "subCategoryName": "本薪",
      "type": "income",
    },
    {
      "amount": 92000,
      "createdAt": "2026-09-05T08:00:00.000Z",
      "createdBy": 1,
      "createdByName": "先生",
      "date": "2026-09-05",
      "id": 97,
      "isDeleted": false,
      "mainCategoryId": 10,
      "mainCategoryName": "薪資",
      "note": null,
      "payerId": 1,
      "payerName": "先生",
      "sourceSubscriptionId": null,
      "subCategoryId": 28,
      "subCategoryName": "本薪",
      "type": "income",
    },
    {
      "amount": 1300,
      "createdAt": "2026-09-03T09:10:00.000Z",
      "createdBy": 2,
      "createdByName": "太太",
      "date": "2026-09-03",
      "id": 88,
      "isDeleted": false,
      "mainCategoryId": 1,
      "mainCategoryName": "食",
      "note": "週末採買",
      "payerId": 2,
      "payerName": "太太",
      "sourceSubscriptionId": null,
      "subCategoryId": 4,
      "subCategoryName": "食材",
      "type": "expense",
    },
  ],
  "page": 1,
  "pageSize": 20,
  "total": 11,
}
`;
